welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday = true && vacation = true || weekday = false && vacation = true || weekday = false && vacation = false ){
                    ^