welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (weekday = true && vacation = true || weekday = false && vacation = true || weekday = false && vacation = false ){
		return true
	}else{
	
		return false 
	}
}